static/css/base.css
@font-face {
    font-family: 'Terrapin';
    src: url('../fonts/Terrapin[1].ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap');

html {
    height: 100%;
}


h1, h2, h5 {
    font-family: 'Terrapin', serif;
}


body {
    background-color: #FFF8DC;
    color: #2C2C2C;
    font-family: 'Anonymous Pro', monospace;
}

.centre-flex {
    display: flex;
    justify-content: center; /* Center horizontally */
    align-items: center; /* Center vertically */
    text-align: center; /* Center text for child elements */
}

/* Header and Logo */
.header-container {
    display: none;
    position: fixed;
    top: 0;
    width: 100%;
    background-color: #6B4F4F;
    z-index: 500;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    transition: top 0.3s;
}

header {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: #6B4F4F;
    z-index: 1000;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    transition: top 0.3s;
}

.header-container img.icon {
    max-height: 50px; 
    margin-top: 10px;
}

.header-container.fixed-top {
    z-index: 400; 
    background-color: #6B4F4F;
    box-shadow: 0 2px 4px rgba(0,0,0,.1); 
}


#delivery-banner {
    width: 100%;
}


#delivery-banner h4 {
    margin: 0; 
    padding: 10px 0; 
    background-color: #2C2C2C;
}

.nav-link {
    color: #FFF8DC; 
}

.nav-link:hover {
    color: #DAA520; 
}


.container {
    padding-top: 200px;
}

/* Sticky Header JavaScript-Enabled Behavior */
.header-hidden {
    top: -100px; 
}

/* Cards */
.card {
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
}

.card-img-top {
    max-height: 200px;
    object-fit: cover;
}

.card-body {
    background-color: #6B4F4F;
    color: #FFF8DC;
}

.card-title {
    color: #DAA520;
    font-size: 2rem;
    text-align: center;
}

.merch-card {
    width: 100%;    
    height: 200px;  
    object-fit: cover; 
}

.merch-card .card-img-top {
    width: 100%;    
    height: 200px;  
    object-fit: cover; 
    margin-top: 10px;  
    object-position: top;
}

.cartoon-fudge {
    max-width: 50%;
    height: auto;
    display: block;
    margin: 0 auto;
}

.cartoon-fudge img {
    width: 100%;
}

/* Allergen symbols */
.allergen-symbols {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
}

.allergen-symbol {
    width: 30px; 
    height: 30px;
    object-fit: cover;
}

.allergen-circle {
    display: inline-flex; 
    justify-content: center; 
    align-items: center;
    width: 35px;
    height: 35px;
    background-color: white;
    border-radius: 50%;
    border: 2px solid #ddd;
    margin: 2px;
}

.allergen-circle img {
    width: 70%;
    height: auto; 
}

/* Allergen filtering */
.grid-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
    gap: 10px;
    padding: 10px;
}

.checkbox-group label {
    display: flex;
    align-items: center;
    cursor: pointer;
}

.checkbox-group span {
    font-size: 0.8rem; 
}


/* Merch Styling */
#text-display {
    font-family: 'Terrapin', sans-serif;
}


/* Buttons */
.btn-primary {
    background-color: #DAA520;
    border-color: #DAA520;
}

.btn-primary:hover {
    background-color: #c98a1e;
    border-color: #c98a1e;
}

.btn:active, .btn:focus {
    background-color: #8B4513; 
    color: white; 
    outline: none;
}

.update-link, .remove_item {
    cursor: pointer;
}

.message-container {
    position: fixed;
    top: 120px; 
    right: 15px;
    z-index: 9999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}


/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

/* Utility Classes */
.mt-mobile-header {
    margin-top: 60px; 
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #fff;
    background-color: #222;
    border-color: #222;
}

.allauth-form-inner-content a {
	color: #17a2b8; /* text-info */
}

/* Overlay covering the entire screen */
.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
    z-index: 1050; /* High z-index to cover other content */
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Container for the loading image */
.loading-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100px; /* Adjust size as needed */
    height: 100px; /* Adjust size as needed */
}

/* Styling the loading image */
#loadingLogo {
    width: 100%; /* Full width of its container */
    height: auto; /* Maintain aspect ratio */
    box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.75); /* White glow around the image */
    animation: glow 1.5s infinite alternate; /* Animated glow effect */
}

/* Keyframes for the glow animation */
@keyframes glow {
    from {
        box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
    }
    to {
        box-shadow: 0 0 20px rgba(255, 255, 255, 1);
    }
}

@media (max-width: 768px) {
    .mt-mobile-header {
        margin-top: 0;
    }
}

